// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Category /> should render small 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  color: #4c5467;
  font-size: 0.875rem;
}

.c2 {
  color: #005994;
  font-size: 1.125rem;
}

.c1 {
  width: 2rem;
  display: inline-block;
  margin: 0.2rem 0.625rem 0.2rem 0;
}

<div>
  <div
    class="c0"
  >
    <img
      alt=""
      class="c1"
      src="/public/icons/remuneration.svg"
    />
    <h3
      class="c2"
    >
      title
    </h3>
    <p
      class="c3"
    >
      texte
    </p>
  </div>
</div>
`;

exports[`<Category /> should render with default props 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.c3 {
  color: #4c5467;
  font-size: 0.875rem;
}

.c2 {
  color: #005994;
  font-size: 1.125rem;
}

.c1 {
  width: 2.5rem;
  display: inline-block;
  margin: 1rem;
}

<div>
  <div
    class="c0"
  >
    <img
      alt=""
      class="c1"
      src="/public/icons/remuneration.svg"
    />
    <h3
      class="c2"
    >
      title
    </h3>
    <p
      class="c3"
    >
      texte
    </p>
  </div>
</div>
`;
